# edge-mamba

./: .gitignore  Makefile  README.md  benchmark_results.md  mamba.py  pyproject.toml
edge_mamba/: numpy_model.py  torch_model.py
exemples/world_model/: create_world_model.py  inference_world_model.py  simulate_story.py  story_data_gen.py
scripts/: benchmark.py  export_onnx_step.py  export_to_numpy.py  run_edge.py  train.py  train_numpy.py
tests/: temp_consistency.onnx  temp_consistency.onnx.data  test_backward_consistency.py  test_consistency.py  test_mimo_backport.py  test_numpy.py  test_step_consistency.py
