[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edge_mamba"
version = "0.1.0"
description = "A lightweight, NumPy-only Mamba implementation optimized for Edge AI, sensor processing, and HDL reference design."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "torch>=2.0.0",
    "pytest",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
