[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edge_mamba"
version = "0.1.0"
description = "A lightweight, NumPy-only Mamba implementation optimized for Edge AI, sensor processing, and HDL reference design."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "torch>=2.0.0",
    "pytest",
    "ruff",
    "mypy",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["build/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Recommended rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "ARG001"]
